- Xp popups removed from chat, they appear in a much better place now - Progress bars show when /skills